fixes #4120 - fix border-collapse:collapse tables in Firefox with disappearing lines
(cherry picked from commit f615c7cc90ba95508c4e15709c2ac321c777b556)

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -145,3 +145,9 @@ background-color: white;
 
 .popover{max-width: none}
 
+@-moz-document url-prefix() {
+  /* Workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=688556 */
+  *, *:before, *:after {
+    background-clip: padding-box;
+  }
+}
